# GitLabWorkRunner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  config.example.toml  rules.example.toml
.github/release-notes/: v1.0.0.md  v1.0.1.md  v1.0.10.md  v1.0.11.md  v1.0.12.md  v1.0.13.md  v1.0.14.md  v1.0.15.md  v1.0.16.md  v1.0.17.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.0.9.md  v1.3.0.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v2.0.1.md  v2.0.10.md  v2.0.11.md  v2.0.12.md  v2.0.13.md  v2.0.14.md  v2.0.15.md  v2.0.16.md  v2.0.17.md  v2.0.2.md  v2.0.3.md  v2.0.4.md  v2.0.5.md  v2.0.6.md  v2.0.7.md  v2.0.8.md  v2.0.9.md  (+4 more)
.github/workflows/: ci.yml  release.yml
docs/: design.md  gitlab-webhook.md  implementation-plan.md
docs/superpowers/plans/: 2026-06-26-ai-review.md  2026-07-10-ai-review-coverage.md  (+6 more)
examples/scripts/: check_todo_tbd.py
scripts/: linux-background.sh
src/: ai_review.rs  config.rs  error.rs  gitlab.rs  lib.rs  main.rs  review.rs  rules.rs  script_tasks.rs  server.rs  webhook.rs
src/app/: active_reviews.rs  config.rs  error.rs  mod.rs  server.rs  server_tests.rs  webhook.rs  webhook_response.rs
src/dashboard/: config.rs  mod.rs  queries.rs  server.rs  views.rs
src/gitlab/: client.rs
src/review/: ai.rs  ai_http.rs  ai_prompt.rs  ai_schema.rs  ai_tools.rs  archive.rs  comments.rs  diff.rs  mod.rs  notifier.rs  rules.rs  scripts.rs  service.rs  work_cleanup.rs
src/storage/: mod.rs
tests/: e2e_review.rs
tests/fixtures/: gitlab_mr_event.json  mr_changes.json
(+8 files in other folders)
